--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,13 @@
   "description":
     "Oresabre Extention",
   "icons": {"16": "images/16.gif", "48": "images/48.gif", "128": "images/128.gif"},
-  "permissions": ["tabs", "notifications"],
-  "options_page": "options.html",
+  "permissions": ["tabs", "http://www.google.com/*", "notifications"],
   "background": { "scripts": ["background.js"] },
   "manifest_version": 2,
   "browser_action" : {
-    "default_popup" : "popup.html",
-    "default_icon" : "images/icon.gif"
+    "default_icon" : "images/icon.gif",
+    "popup" : "popup.html"
   },
-
+  "options_page": "options.html",
   "web_accessible_resources" : ["images/48.png"]
 }
